fixed bugs related to homepage display on mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -24,6 +24,11 @@ $font-family_1: 'Fasthand', cursive;
 	margin-top: .3rem;
 	margin-bottom: .3rem;
 }
+
+.link-wrapper button {
+	color: black;
+}
+
 .dxvid-wrapper {
 	text-align: center;
 	font-family: $font-family_1;
